<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Column1">CPU freq</string>
    <string name="app_name">Vsel Calculator</string>
    <string name="hello">Layout preview for vsel calc</string>
    <string name="arrow">-></string>
    <string name="calc">Calculate!</string>
    <string name="mhz"> MHz</string>
    <string name="voltage">Recommended Voltage</string>
    <string name="credits">Credits</string>
    <string name="spinner">Number of frequencies</string>
    <string name="welcome">Welcome to Vsel Calculator</string>
    <string name="range"> +/-2</string>
    <string name="changelog_full_title">ChangeLog</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    <string name="auto_detect">Auto-Detect!</string>
    <string name="Help">Help</string>
    <string name="home">Home</string>
    
       
    <string-array name="spinner_choices">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>